k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pipeline-api
  namespace: garbo-stage
spec:
  selector:
    app: pipeline-api
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
